<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="simpleSearch"
        android:text="@string/simple_search" />

    <SeekBar
        android:id="@+id/seekBar01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/seekBar00"
        android:layout_below="@+id/seekBar00"
        android:max="@integer/maxPrice" />

    <SeekBar
        android:id="@+id/seekBar00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editText00"
        android:layout_marginTop="14dp"
        android:layout_toLeftOf="@+id/button3"
        android:max="@integer/minMaxPrice" />

    <EditText
        android:id="@+id/editText00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/button3"
        android:ems="20"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button2"
        android:onClick="soapSearch"
        android:text="@string/button_search" />

    <TextView
        android:id="@+id/textView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBar01"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/seekBar00" />

    <TextView
        android:id="@+id/textView00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/seekBar00"
        android:layout_alignLeft="@+id/textView01"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/seekBar00"
        android:layout_toLeftOf="@+id/textView01" />

    <Button
        android:id="@+id/Button01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_toRightOf="@+id/button2"
        android:onClick="byPriceSearch"
        android:text="@string/search_bytype" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/seekBar01"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/RadioMtb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/type_mtb" />

        <RadioButton
            android:id="@+id/RadioRoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_road" />

        <RadioButton
            android:id="@+id/RadioUrban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_urban" />

        <RadioButton
            android:id="@+id/RadioBmx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_bmx" />

        <RadioButton
            android:id="@+id/RadioKids"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_kids" />

        <RadioButton
            android:id="@+id/RadioAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_all" />
    </RadioGroup>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/Button01"
        android:onClick="advancedSearch"
        android:text="@string/advanced_search" />

</RelativeLayout>